# svg-graph-parser

./: .gitignore  README.md  path  pyproject.toml
.claude/: settings.json
examples/: count_tokens.py  demo.py
svg_graph_parser/: __init__.py  assemble.py  connect_world1.py  constants_world1.py  evaluate.py  geometry.py  matcher.py  model.py  oracle.py  parse_world1.py  parser.py  svg_loader.py  transforms.py
svg_graph_parser/core/: containment.py  geometry_world1.py  loader.py  matcher.py  point_match.py  text_reader.py  transforms.py
svg_graph_parser/mcp/: server.py
svg_graph_parser/scene/: scene_graph.py
svg_graph_parser/world1/: arrows.py  connect.py  constants.py  parse.py  pipeline.py
svg_graph_parser/world2/: assemble.py  parser.py
tests/: test_connect_world1.py  test_geometry_world1.py  test_parse_world1.py  test_reconstruction.py
tests/core/: test_containment.py  test_geometry.py  test_loader.py
tests/scene/: scene_graph_report.txt  show_scene_graphs.py  test_scene_graph.py
tests/world1/: test_arrows.py  test_connect.py  test_endpoint_heads.py  test_markers.py  test_parse.py  test_pipeline.py
tests/world2/: test_reconstruction.py
