[project]
name = "svg-graph-parser"
version = "0.1.0"
description = "Reconstruct a connection graph from an SVG diagram using geometry alone, validated against draw.io's embedded ground truth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "svgpathtools>=1.7.2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = [
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["svg_graph_parser"]



